--- a/DonorAppVersion2/Views/Donor/DonorProfile.cshtml
+++ b/DonorAppVersion2/Views/Donor/DonorProfile.cshtml
@@ -33,7 +33,15 @@
                 <div class="row">
                     <div class="col-md-4">Email @Html.DisplayFor(model => model.isEmailVerified)</div>
                     <div class="col-md-8">@Html.DisplayFor(model => model.Email)</div>
-                </div>
+                </div><hr />
+                <div class="row">
+                    <div class="col-md-4">Donor Type</div>
+                    <div class="col-md-8">@Html.DisplayFor(model => model.DonorType)</div>
+                </div><hr />
+<div class="row">
+    <div class="col-md-4">Gender</div>
+    <div class="col-md-8">@Html.DisplayFor(model => model.Gender)</div>
+</div>
                 <hr />
                 <div class="row">
                     <div class="col-md-4">Date of Birth</div>
