--- a/DonorAppVersion2/Views/Parent/Dashboard.cshtml
+++ b/DonorAppVersion2/Views/Parent/Dashboard.cshtml
@@ -51,6 +51,7 @@
                     <tr>
 
                         <th>Donor Id</th>
+                        <th>Child Type</th>
                         <th>Month and Year of Retrival</th>
                         <th>Fertility Attorny</th>
                         <th>Donors Eye Color</th>
@@ -72,6 +73,7 @@
                     {
                         <tr>
                             <td>@cycle.DonorId</td>
+                            <td>@cycle.ChildType</td>
                             <td>@cycle.MonthAndYearOfRetrieval</td>
                             <td>@cycle.FertilityAttorny</td>
                             <td>@cycle.DonorEyeColor</td>
