--- a/DonorAppVersion2/Views/Parent/PayRegistrationFees.cshtml
+++ b/DonorAppVersion2/Views/Parent/PayRegistrationFees.cshtml
@@ -24,7 +24,7 @@
     <input type="hidden" name="business" value="Donor21.com">
     <input type="hidden" name="currency_code" value="USD">
     <input type="hidden" name="cmd" value="_xclick">
-    <div style="padding:25px; border:solid 1px; border-radius:5px">
+    <div style="padding:25px; border:solid 1px; border-radius:5px"> 
 
         <div class="form-group">
             <div class="col-md-12">
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.item_name, "Description of the Payment", htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-8">
-                <input type="text" name="amount" class="form-control" value="Donor 21 Registration Charges (USD 1)" readonly>
+                <input type="text" name="amount" class="form-control" value="Donor 21 Registration Charges" readonly>
                 <br /> </div>
         </div>
         
