--- a/DonorAppVersion2/Views/Parent/ViewDonorCycle.cshtml
+++ b/DonorAppVersion2/Views/Parent/ViewDonorCycle.cshtml
@@ -33,6 +33,7 @@
     <table class="table table-striped">
         <tr style="font-size:xx-small">
             <th>Donor Id</th>
+            <th>Child Type</th>
             <th>Month and Year of Retrival</th>
             <th>Fertility Attorny</th>
             <th>Donors Eye Color</th>
@@ -45,6 +46,7 @@
         <tr>
 
             <td>@Model.DonorCycle.DonorId</td>
+            <td>@Model.DonorCycle.ChildType</td>
             <td>@Model.DonorCycle.MonthAndYearOfRetrieval</td>
             <td>@Model.DonorCycle.FertilityAttorny</td>
             <td>@Model.DonorCycle.DonorEyeColor</td>
