--- a/DonorAppVersion2/Views/Donor/Registration.cshtml
+++ b/DonorAppVersion2/Views/Donor/Registration.cshtml
@@ -42,6 +42,25 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.DonorType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @{
+    var typeselectList = new SelectList(
+        new List<SelectListItem>
+                        {
+                            new SelectListItem {Text = "Egg Donor", Value = "Egg Donor"},
+                            new SelectListItem {Text = "Sperm Donor", Value = "Sperm Donor"},
+                            new SelectListItem {Text = "Embryo Donor", Value = "Embryo Donor"},
+                            new SelectListItem {Text = "Genetic Parent Donor", Value = "Genetic Parent Donor"}
+                        }, "Value", "Text");
+                }
+                @Html.DropDownListFor(model => model.DonorType, typeselectList, "Select", new { @class = "form-control" })
+            </div>
+        </div>
+
+        
+
+        <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
@@ -54,6 +73,21 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
                 @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @{
+    var genderselectList = new SelectList(
+        new List<SelectListItem>
+                        {
+                            new SelectListItem {Text = "Male", Value = "Male"},
+                            new SelectListItem {Text = "Female", Value = "Female"}
+                        }, "Value", "Text");
+                }
+                @Html.DropDownListFor(model => model.Gender, genderselectList, "Select", new { @class = "form-control" })
             </div>
         </div>
 
