--- a/DonorAppVersion2/Views/Parent/AddDonorCycle.cshtml
+++ b/DonorAppVersion2/Views/Parent/AddDonorCycle.cshtml
@@ -16,7 +16,6 @@
             }
         });
 
-
     });
 </script>
 @using (Html.BeginForm("AddDonorCycle", "Parent", FormMethod.Post))
@@ -64,7 +63,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.MonthAndYearOfRetrieval, "Month & Year of Retrieval", htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.MonthAndYearOfRetrieval, new { htmlAttributes = new { @class = "form-control" }, @required = "required", @placeholder = "MM/yyyy" })
+                        <input type="month" name="MonthAndYearOfRetrieval" class="form-control"required placeholder="mm/yyyy">
                         @Html.ValidationMessageFor(model => model.MonthAndYearOfRetrieval, "", new { @class = "text-danger" })
                     </div>
                 </div>
